--- a/index.html
+++ b/index.html
@@ -360,20 +360,20 @@
   <footer class="site-footer">
     <div class="footer-left">
       <div class="footer-adress">
-        <p><b>Адрес:</b><br> Россия, Турлатовское сельское поселение, Рязанский район</p>
+        <p><b>Адрес:</b></p>
+        <p>Россия, Турлатовское сельское поселение, Рязанский район</p>
       </div>
     </div>
     <div class="footer-center">
       <div class="header-worktime">
-        <p><b>Режим работы:</b><br>Пн-Пт: 8:00-18:00<br>Сб-Вс: Выходной</p>
-        <p>Принимаем звонки 24/7</p>
+        <p><b>Режим работы:</b></p>
+        <p class="footertime">Пн-Пт: 8:00-18:00<br>Сб: 8:00-12:00<br>Вс: Выходной</p>
       </div>
     </div>
     <div class="footer-right">
       <div class="footer-contacts">
         <p><b>Контакты:</b></p>
-        <p>adress@mail</p>
-        <p>8(900)000-00-00<br>8(911)000-00-01<p>
+        <p>adress@mail<br>8(900)000-00-00<br>8(911)000-00-01<p>
       </div>
     </div>
   </footer>
