--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div><img src="https://niris.ru/images/buttons/Telegram.svg" height="35px" alt="Telegram" title="Telegram"></div>
       </div>
       <div class="header-contacts">
-        <div class="mail"><p><i class="bi bi-envelope"></i> adress@mail</p></div>
+        <div class="mail"><p><i class="bi bi-envelope"></i> Emailadress@mail.com</p></div>
         <div class="phone"><p>8(900)000-00-00 <br>8(911)000-00-01</p></div>
       </div>
       
@@ -65,13 +65,10 @@
     <section class="section" id="about">
     <div class="section-about">
       <h2>О Компании</h2>
-      <i class="bi bi-telephone"></i>
-      <i class="bi bi-telephone-fill"></i>
-      <i class="bi bi-check-circle"></i>
-      <i class="bi bi-check2-circle"></i>
-      <i class="bi bi-at"></i>
-      <p><b>Поддон (pallet)<i class="material-icons">pallet</i></b> - самая распространенная тара для хранениия и траспортировки любого вида материалов и продукции. Так же, благодаря конструкции поддонов, упрощается погрузка и разгрузка всевозможных грузов. Наша компания специализируется на производстве и реализации деревянных поддонов. Все поддоны производятся с точным соблюдением требований ГОСТа(124356) в специально оборудованных цехах из обрезного материала хвойных и лиственных пород. Пиломатериал для поддонов мы производим на собственной пилораме, что позволяет нам не зависеть от поставщиков данного направления.
-      </p>
+      <div class="testtext">
+      <p><b>Поддон (pallet)<i class="material-icons">pallet</i></b> - самая распространенная тара для хранениия и траспортировки любого вида материалов и продукции. Так же, благодаря конструкции поддонов, упрощается погрузка и разгрузка всевозможных грузов. Наша компания специализируется на производстве и реализации деревянных поддонов. Все поддоны производятся с точным соблюдением требований ГОСТа(124356) в специально оборудованных цехах из обрезного материала хвойных и лиственных пород. Пиломатериал для поддонов мы производим на собственной пилораме, что позволяет нам не зависеть от поставщиков данного направления.</p>
+      <img src="https://avatars.mds.yandex.net/get-altay/1871013/2a0000016a225b14d8db81bdc33680a26ea3/XXXL" height="320" width="460">
+      </div>
     </div>
     </section>
     <!--Описание продукции-->
