--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!--Витрина поддонов-->
     <div class="products">
       <div class="prod-container">
-        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <h5 class="type_title">Новый поддон 800х1200 (1 сорт)</h5>
         <img src="/images/800x1200i.png" alt="Паллеты 1200х800" class="poddon_img" width="320" height="240">
         <!--ТХ поддонов-->
         <div class="th-poddon">
@@ -141,7 +141,7 @@
         </div>
       </div>
       <div class="prod-container">
-        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <h5 class="type_title">Новый поддон 800х1200 (2 сорт)</h5>
         <img src="images/800x1200ii.jpg" alt="Паллеты 1200х800" class="poddon_img" width="320" height="240">
         <!--ТХ поддонов-->
         <div class="th-poddon">
@@ -168,7 +168,7 @@
         </div>
       </div>
       <div class="prod-container">
-        <h5 class="type_title">Новый поддон 800х1200 мм</h5>
+        <h5 class="type_title">Новый поддон 800х1200 (3 сорт)</h5>
         <img src="/images/800x1200iii.jpg" alt="Паллеты 1200х800" class="poddon_img" width="320" height="240">
         <!--ТХ поддонов-->
         <div class="th-poddon">
@@ -195,7 +195,7 @@
         </div>
       </div>
       <div class="prod-container">
-        <h5 class="type_title">Новый поддон 1000х1200 мм</h5>
+        <h5 class="type_title">Новый поддон 1000х1200 (1 сорт)</h5>
         <img src="images/1000x1200i.jpg" alt="Паллеты 1200х800" class="poddon_img" width="320" height="240">
         <!--ТХ поддонов-->
         <div class="th-poddon">
@@ -222,7 +222,7 @@
         </div>
       </div>
       <div class="prod-container">
-        <h5 class="type_title">Новый поддон 1000х1200 мм</h5>
+        <h5 class="type_title">Новый поддон 1000х1200 (2 сорт)</h5>
         <img src="images/1000x1200ii.jpg" alt="Паллеты 1200х800" class="poddon_img" width="320" height="240">
         <!--ТХ поддонов-->
         <div class="th-poddon">
@@ -249,7 +249,7 @@
         </div>
       </div>
       <div class="prod-container">
-        <h5 class="type_title">Новый поддон 1000х1200 мм</h5>
+        <h5 class="type_title">Новый поддон 1000х1200 (3 сорт)</h5>
         <img src="images/1000x1200iii.jpg" alt="Паллеты 1200х800" class="poddon_img" width="320" height="240">
         <!--ТХ поддонов-->
         <div class="th-poddon">
