--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru-RU">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Продажа поддонов и пиломатериала</title>
   <link rel="stylesheet" href="style.css">
