--- a/index.html
+++ b/index.html
@@ -41,7 +41,20 @@
   </div>
   <div class="line"></div>
   <div class="slider">
-      <div class="slider_frame"></div>
+      <div class="slider_frame">
+        <ul id="slides">
+          <li class="slide showing"><img src="images/slide11.jpg">
+          </li>
+          <li class="slide"><img src="images/slide22.jpg">
+          </li>
+          <li class="slide"><img src="images/slide44.png">
+          </li>
+          <li class="slide"><img src="images/slide55.jpg">
+          </li>
+          <li class="slide"><img src="images/slide33.jpg">
+          </li>
+        </ul>
+      </div>
   </div>
   <div class="line"></div>
   <div id="about" class="block">
@@ -163,6 +176,7 @@
           </div>
         </div>
       </div>
+    </div>
   </div>
   <div class="line"></div>
   <div id="wood" class="block">
@@ -220,6 +234,7 @@
           </div>
         </div>
       </div>
+    </div>
   </div>
   <div class="line"></div>
   <div id="advantages" class="why">
@@ -255,9 +270,47 @@
     </div>
   </div>
   <div class="line"></div>
-  <div class="contacts"></div>
-  <div class="map"></div>
-  <div class="footer"></div>
+  <div id="contacts" class="contacts">
+    <div class="head">
+      <div class="head_up"><a>Контакты</a></div>
+      <div class="head_under" style="background-color: #009245; width: 118px; height: 5px;"></div>
+    </div>
+    <div id="cont" class="text"><b>Адрес:</b><br>Россия, Турлатовское сельское поселение, Рязанский район, автодорога Рязань - Пронск, 12-й километр<br><b>Телефон:</b><br>+7(958)657-65-06 +7(903)693-81-94<br><b>E-mail:</b><br>gkdsa62@mail.ru</div>
+  </div>
+  <div class="line"></div>
+  <div class="map">
+    <div class="head">
+      <div class="head_up">
+        <img src="images/navigator.svg">
+        <a>Мы на карте</a>
+      </div>
+      <div class="head_under" style="background-color: #009245; width: 180px; height: 5px;"></div>
+    </div>
+    <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Afe0f3105429ec8e43e9dc2660cd16206e3d9e491615cb8f1de83e3d00730caec&amp;source=constructor" frameborder="0" allowfullscreen="true" width="100%" height="500px" style="display: block;"></iframe>
+  </div>
+  <div class="line"></div>
+  <div class="footer">
+    <div class="footer_frame">
+      <div class="footer_left">
+        <div class="footer_title">
+          <img src="images/navigator_green.svg">
+          <a>Адрес:</a>
+        </div>
+        <div class="footer_text">Россия, Турлатовское сельское поселение, Рязанский район, автодорога Рязань - Пронск, 12-й километр</div>
+      </div>
+      <img src="teh 1.svg">
+      <div class="footer_right">
+        <div class="footer_title">
+          <img src="images/Vector_green.svg">
+          <a>Контакты:</a>
+        </div>
+        <div class="footer_text">8(958)657-65-06<br>8(903)693-81-94<br>gkdsa62@mail.ru</div>
+      </div>
+    </div>
+  </div>
+</div>
+<div id="scroll-to-top">
+  <img src="images/arrow.svg" title="Наверх" height="56" width="56" href="#top">
 </div>
 <script>
   var slides = document.querySelectorAll('#slides .slide');
