--- a/index.html
+++ b/index.html
@@ -62,17 +62,23 @@
       <div class="head_up"><a>О компании</a></div>
       <div class="head_under" style="background-color: #009245; width: 145px; height: 5px;"></div>
     </div>
-    <div class="text"><a>Наша компания занимается лесопилением и производством поддонов, имеет обширную инфраструктуру, включающую три лесопильных участка и два сборочных цеха. На лесопильных участках происходит первичная обработка древесины, ее раскрой на необходимые размеры и приготовление заготовок для производства поддонов. Далее, заготовки доставляются в сборочные цеха, где происходит сборка деревянных поддонов. После сборки, готовая продукция проходит контроль качества, после чего отправляется на открытый или закрытый склад готовой продукции. Компания производит примерно 15000 поддонов в месяц, что является впечатляющим объемом производства. Благодаря своей продуктивности и опыту, компания способна удовлетворять потребности клиентов в различных отраслях промышленности и логистики.</a></div>
+    <div class="text"><a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Находимся в городе Рязань, но наша компания успешно работает по всей России. Мы специализируемся на лесопилении и производстве деревянных поддонов, предоставляя клиентам высококачественные продукты и широкий спектр услуг. Наша инфраструктура включает в себя три лесопильных участка и два сборочных цеха.<br><br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;На лесопильных участках мы проводим первичную обработку древесины, выполняем раскрой на необходимые размеры и готовим заготовки для производства поддонов. Эти заготовки тщательно проверяются на соответствие стандартам качества, прежде чем отправить их в сборочные цеха.<br><br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;В сборочных цехах происходит сборка деревянных поддонов. Этот этап важен, так как деревянные поддоны играют ключевую роль в логистике и хранении товаров. Они обеспечивают безопасность и сохранность груза, защищая его от повреждений, а также помогают правильно распределить вес и балансировать груз при транспортировке.<br><br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;После сборки готовая продукция проходит строгий контроль качества, гарантируя, что наши поддоны соответствуют высоким стандартам. Затем они отправляются на открытые и закрытые склады, где ожидают своего использования.<br><br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Мы производим впечатляющий объем поддонов, достигая около 15 000 штук в месяц. Благодаря нашей продуктивности и опыту, мы можем удовлетворить потребности клиентов в различных отраслях промышленности и логистики.<br><br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Деревянные поддоны обладают множеством преимуществ. Они экологически безопасны и устойчивы к использованию, так как могут быть легко переработаны и восстановлены. Кроме того, они экономически выгодны, предоставляя организациям доступное решение для логистики и хранения товаров. Их стандартный размер и форма также способствуют эффективному использованию пространства на складе и в транспорте, что позволяет снизить расходы и улучшить конкурентоспособность продукции и услуг.<br><br>
+      </a></div>
   </div>
   <div class="line"></div>
-  <div id="products" class="block">
+  <!-- <div id="products" class="block">
     <div class="head">
       <div class="head_up"><a>Наша продукция</a></div>
       <div class="head_under" style="background-color: #009245; width: 206px; height: 5px;"></div>
     </div>
     <div class="text"><a>Деревянные поддоны (паллеты) являются одним из наиболее распространенных и важных компонентов в современной логистике и хранении. Они широко используются во всех отраслях экономики, включая производство, транспортировку и хранение товаров. Одной из ключевых ролей, которую играют деревянные поддоны, является обеспечение безопасности и сохранности груза. Поддоны позволяют защитить товары от повреждений, таких как царапины, удары и деформации, а также обеспечивают правильное распределение веса и балансировку груза при транспортировке. Кроме того, использование деревянных поддонов обеспечивает эффективное использование пространства склада и транспортных средств. Так как поддоны обычно имеют стандартный размер и форму, они могут быть легко уложены и упакованы вместе с другими поддонами, что значительно экономит место в хранилище и на транспорте. Это позволяет сократить расходы на транспортировку и хранение товаров, что является важным фактором в современном бизнесе. Деревянные поддоны являются экологически безопасными и устойчивыми к использованию. Они могут быть легко переработаны и восстановлены, что делает их идеальным вариантом для организаций, которые заботятся о снижении своего экологического следа. Наконец, использование деревянных поддонов является экономически выгодным решением для организаций. Они являются более доступным и дешевым вариантом по сравнению с поддонами из других материалов, таких как пластик или металл. Это позволяет организациям снизить свои затраты на логистику и хранение товаров, что, в свою очередь, может привести к более конкурентоспособным ценам на товары и услуги.</a></div>
   </div>
-  <div class="line"></div>
+  <div class="line"></div> -->
   <div id="pallets" class="block">
     <div class="head">
       <div class="head_up"><a>Поддоны</a></div>
@@ -275,7 +281,7 @@
       <div class="head_up"><a>Контакты</a></div>
       <div class="head_under" style="background-color: #009245; width: 118px; height: 5px;"></div>
     </div>
-    <div id="cont" class="text"><b>Адрес:</b><br>Россия, Турлатовское сельское поселение, Рязанский район, автодорога Рязань - Пронск, 12-й километр<br><b>Телефон:</b><br>+7(958)657-65-06 +7(903)693-81-94<br><b>E-mail:</b><br>gkdsa62@mail.ru</div>
+    <div id="cont" class="text"><b>Адрес:</b><br>Россия, Турлатовское сельское поселение, Рязанский район, автодорога Рязань - Пронск, 12-й километр<br><b>Телефон:</b><br>+7(958)657-65-06<br>+7(903)693-81-94<br><b>E-mail:</b><br>gkdsa62@mail.ru</div>
   </div>
   <div class="line"></div>
   <div class="map">
