--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         </div>
         <div class="footer_text">Россия, Турлатовское сельское поселение, Рязанский район, автодорога Рязань - Пронск, 12-й километр</div>
       </div>
-      <img src="teh 1.svg">
+      <img class="footer_logo" src="teh 1.svg">
       <div class="footer_right">
         <div class="footer_title">
           <img src="images/Vector_green.svg">
